--- a/pages/actives/actives.template.html
+++ b/pages/actives/actives.template.html
@@ -143,7 +143,7 @@
         <div class="row">
             <div class="col">
                 {{#daily.answers}}
-                <button class="activesModalDaily--answer" onclick="dailyAnswerClick(this)" data-answer="{{value}}">{{value}}</button>
+                    <button class="activesModalDaily--answer {{cssClass}}" id="activesModalDaily--answer--{{id}}" onclick="dailyAnswerClick(this)" data-answer="{{value}}" data-id="{{id}}">{{value}}</button>
                 {{/daily.answers}}
             </div>
         </div>
