--- a/pages/actives/actives.template.html
+++ b/pages/actives/actives.template.html
@@ -73,7 +73,7 @@
                      data-icon="{{image_url}}"
                      data-text="{{description}}"
                      data-level="{{level}}"
-                     data-income="{{fake_income}}%"
+                     data-income="{{income_percentage}}%"
                      data-start-price="{{next_level_cost}}"
                      data-income-price="{{total_investment}}"
                      data-income-value="{{income}}"
@@ -100,7 +100,7 @@
                             <div class="activesContent--itemTextBodyCol activesContent--itemTextBodyIncome">
                                 <p class="activesContent--itemTextBodyColTitle">{{text.income}}</p>
                                 <p class="activesContent--itemTextBodyColValue">
-                                    {{fake_income}}%
+                                    {{income_percentage}}%
                                 </p>
                             </div>
                         </div>
