fix balance updates

--- a/pages/actives/actives.template.html
+++ b/pages/actives/actives.template.html
@@ -12,7 +12,7 @@
 <div class="container-fluid screenHeader screenHeader--activesBalance mb-0 pt-0">
     <div class="row">
         <div class="col">
-            <h1 class="screenHeader--title screenHeader--title--points"><span id="activesBalance">{{balance}}</span> <img src="https://d25ebjvanew4na.cloudfront.net/static/icon-coin.svg" alt="coin"></h1>
+            <h1 class="screenHeader--title screenHeader--title--points"><span id="screenHeader--balance">{{balance}}</span> <img src="https://d25ebjvanew4na.cloudfront.net/static/icon-coin.svg" alt="coin"></h1>
         </div>
     </div>
 </div>
