--- a/pages/actives/actives.template.html
+++ b/pages/actives/actives.template.html
@@ -74,9 +74,10 @@
                      data-text="{{description}}"
                      data-level="{{level}}"
                      data-income="{{income_percentage}}%"
-                     data-start-price="{{next_level_cost}}"
-                     data-income-price="{{total_investment}}"
-                     data-income-value="{{income}}"
+                     data-start-price="{{f_next_level_cost}}"
+                     data-price-raw="{{next_level_cost}}"
+                     data-income-price="{{f_total_investment}}"
+                     data-income-value="{{f_income}}"
                      data-id="{{card_id}}"
                      onclick="showActivesModal(this)"
                 >
@@ -93,7 +94,7 @@
                             <div class="activesContent--itemTextBodyCol activesContent--itemTextBodyStartPrice">
                                 <p class="activesContent--itemTextBodyColTitle">{{text.price}}</p>
                                 <p class="activesContent--itemTextBodyColValue">
-                                    {{next_level_cost}}
+                                    {{f_next_level_cost}}
                                     <img src="https://d25ebjvanew4na.cloudfront.net/static/icon-coin.svg" alt="coin" class="activesContent--itemTextBodyColCoinIcon">
                                 </p>
                             </div>
@@ -107,11 +108,11 @@
                     </div>
                     <div class="activesContent--itemIncome">
                         <p class="activesContent--itemIncomePrice">
-                            {{total_investment}}
+                            {{f_total_investment}}
                             <img src="https://d25ebjvanew4na.cloudfront.net/static/icon-coin.svg" alt="coin" class="activesContent--itemIncomePriceCoinIcon">
                         </p>
                         <p class="activesContent--itemIncomeValue">
-                            {{income}}
+                            {{f_income}}
                             <img src="https://d25ebjvanew4na.cloudfront.net/static/icon-coin.svg" alt="coin" class="activesContent--itemIncomeValueCoinIcon">
                         </p>
                     </div>
