--- a/pages/friends/friends.template.html
+++ b/pages/friends/friends.template.html
@@ -77,13 +77,13 @@
                         <p class="friendsList--item--textName">{{user_name}}</p>
                         <p class="friendsList--item--textScore">
                             {{level_name}}
-                            {{balance}}
+                            {{f_balance}}
                             <img src="https://d25ebjvanew4na.cloudfront.net/static/icon-coin.svg" alt="coin">
                         </p>
                     </div>
                 </div>
                 <div class="friendsList--item--reward d-flex align-items-center">
-                    +{{profit}} <img src="https://d25ebjvanew4na.cloudfront.net/static/icon-coin.svg" alt="coin">
+                    +{{f_profit}} <img src="https://d25ebjvanew4na.cloudfront.net/static/icon-coin.svg" alt="coin">
                 </div>
             </div>
             {{/friends}}
