--- a/pages/actives/actives.template.html
+++ b/pages/actives/actives.template.html
@@ -3,7 +3,7 @@
         <div class="col d-flex justify-content-end">
             <div class="screenTopNotification--container">
                 <span class="screenTopNotification--text" id="screenTopNotification--activesBalance">{{header_notification}}</span>
-                <img src="https://d25ebjvanew4na.cloudfront.net/static/icon-coin.svg" alt="coin" class="screenTopNotification--icon screenTopNotification--icon--coin">
+                <img src="https://cdn.umperium.com/static/icon-coin.svg" alt="coin" class="screenTopNotification--icon screenTopNotification--icon--coin">
             </div>
         </div>
     </div>
@@ -12,7 +12,7 @@
 <div class="container-fluid screenHeader screenHeader--activesBalance mb-0 pt-0">
     <div class="row">
         <div class="col">
-            <h1 class="screenHeader--title screenHeader--title--points"><span id="screenHeader--balance">{{balance}}</span> <img src="https://d25ebjvanew4na.cloudfront.net/static/icon-coin.svg" alt="coin"></h1>
+            <h1 class="screenHeader--title screenHeader--title--points"><span id="screenHeader--balance">{{balance}}</span> <img src="https://cdn.umperium.com/static/icon-coin.svg" alt="coin"></h1>
         </div>
     </div>
 </div>
@@ -34,7 +34,7 @@
                     <h3 class="dailyCard--title">{{text.daily_card_title}}</h3>
                     <div class="dailyCard--reward">
                         <span>{{daily.reward}}</span>
-                        <img src="https://d25ebjvanew4na.cloudfront.net/static/icon-coin.svg" alt="coin">
+                        <img src="https://cdn.umperium.com/static/icon-coin.svg" alt="coin">
                     </div>
                 </div>
                 <div class="dailyCard--right">
@@ -85,7 +85,7 @@
                         <img src="{{image_url}}" alt="icon">
                     </div>
                     <div class="activesContent--itemText">
-                        <h3 class="activesContent--itemTextTitle"><img src="https://d25ebjvanew4na.cloudfront.net/static/icon-arrow-up.svg" alt="up">{{name}}</h3>
+                        <h3 class="activesContent--itemTextTitle"><img src="https://cdn.umperium.com/static/icon-arrow-up.svg" alt="up">{{name}}</h3>
                         <div class="activesContent--itemTextBody">
                             <div class="activesContent--itemTextBodyCol activesContent--itemTextBodyLevel">
                                 <p class="activesContent--itemTextBodyColTitle">{{text.level}}</p>
@@ -95,7 +95,7 @@
                                 <p class="activesContent--itemTextBodyColTitle">{{text.price}}</p>
                                 <p class="activesContent--itemTextBodyColValue">
                                     {{f_next_level_cost}}
-                                    <img src="https://d25ebjvanew4na.cloudfront.net/static/icon-coin.svg" alt="coin" class="activesContent--itemTextBodyColCoinIcon">
+                                    <img src="https://cdn.umperium.com/static/icon-coin.svg" alt="coin" class="activesContent--itemTextBodyColCoinIcon">
                                 </p>
                             </div>
                             <div class="activesContent--itemTextBodyCol activesContent--itemTextBodyIncome">
@@ -109,11 +109,11 @@
                     <div class="activesContent--itemIncome">
                         <p class="activesContent--itemIncomePrice">
                             {{f_total_investment}}
-                            <img src="https://d25ebjvanew4na.cloudfront.net/static/icon-coin.svg" alt="coin" class="activesContent--itemIncomePriceCoinIcon">
+                            <img src="https://cdn.umperium.com/static/icon-coin.svg" alt="coin" class="activesContent--itemIncomePriceCoinIcon">
                         </p>
                         <p class="activesContent--itemIncomeValue">
                             {{f_income}}
-                            <img src="https://d25ebjvanew4na.cloudfront.net/static/icon-coin.svg" alt="coin" class="activesContent--itemIncomeValueCoinIcon">
+                            <img src="https://cdn.umperium.com/static/icon-coin.svg" alt="coin" class="activesContent--itemIncomeValueCoinIcon">
                         </p>
                     </div>
                 </div>
@@ -132,7 +132,7 @@
         <div class="row activesModal--titleWrapper">
             <div class="col d-flex justify-content-end">
                 <button class="activesModal--close" onclick="hideActivesModal()">
-                    <img src="https://d25ebjvanew4na.cloudfront.net/static/icon-close.svg" alt="close">
+                    <img src="https://cdn.umperium.com/static/icon-close.svg" alt="close">
                 </button>
             </div>
         </div>
@@ -156,16 +156,16 @@
         <div class="row activesModal--titleWrapper">
             <div class="col d-flex justify-content-between">
                 <h3 class="activesModal--title">
-                    <img src="https://d25ebjvanew4na.cloudfront.net/static/icon-arrow-up.svg" alt="up">
+                    <img src="https://cdn.umperium.com/static/icon-arrow-up.svg" alt="up">
                     <span id="activesModal--titleContent"></span>
                 </h3>
                 <button class="activesModal--close" id="activesModal--close" onclick="hideActivesModal()">
-                    <img src="https://d25ebjvanew4na.cloudfront.net/static/icon-close.svg" alt="close">
+                    <img src="https://cdn.umperium.com/static/icon-close.svg" alt="close">
                 </button>
             </div>
         </div>
         <div class="row activesModal--logoWrapper  z-0 position-relative">
-            <img src="https://d25ebjvanew4na.cloudfront.net/static/actives-modal-bg.png.webp" srcset="https://d25ebjvanew4na.cloudfront.net/static/actives-modal-bg@2x.png.webp 2x, https://d25ebjvanew4na.cloudfront.net/static/actives-modal-bg@3x.png.webp 3x" alt="bg" class="activesModal--logoWrapperBg">
+            <img src="https://cdn.umperium.com/static/actives-modal-bg.png.webp" srcset="https://cdn.umperium.com/static/actives-modal-bg@2x.png.webp 2x, https://cdn.umperium.com/static/actives-modal-bg@3x.png.webp 3x" alt="bg" class="activesModal--logoWrapperBg">
             <div class="col d-flex flex-column align-items-center z-1">
                 <div class="activesModal--logo">
                     <img src="" alt="logo" id="activesModal--logoImg">
