--- a/pages/home/home.template.html
+++ b/pages/home/home.template.html
@@ -13,7 +13,7 @@
             <div class="screenTopNotification--container screenTopNotification--container-lang d-flex align-items-center" data-bs-toggle="modal" data-bs-target="#langModal">
                 <span data-bs-toggle="modal" data-bs-target="#langModal" class="screenTopNotification--text screenTopNotification--text--button text-capitalize">{{language_code}}</span>
 
-                <img src="https://d25ebjvanew4na.cloudfront.net/static/icon-arrow-down.svg" alt="arrow">
+                <img src="https://cdn.umperium.com/static/icon-arrow-down.svg" alt="arrow">
             </div>
         </div>
     </div>
@@ -22,7 +22,7 @@
 <div class="container-fluid screenHeader">
     <div class="row">
         <div class="col">
-            <h1 class="screenHeader--title"><span id="screenHeader--balance">{{balance}}</span> <img src="https://d25ebjvanew4na.cloudfront.net/static/icon-coin.svg" class="screenHeader--titleIcon" alt="coin"></h1>
+            <h1 class="screenHeader--title"><span id="screenHeader--balance">{{balance}}</span> <img src="https://cdn.umperium.com/static/icon-coin.svg" class="screenHeader--titleIcon" alt="coin"></h1>
         </div>
     </div>
 </div>
@@ -32,7 +32,7 @@
         <div class="col d-flex justify-content-center">
             <div class="tapGame--container">
                 <button id="tapGame--game" class="tapGame--game">
-                    <img src="https://d25ebjvanew4na.cloudfront.net/static/character-level-{{level}}.png.webp" srcset="https://d25ebjvanew4na.cloudfront.net/static/character-level-{{level}}@2x.png.webp 2x, https://d25ebjvanew4na.cloudfront.net/static/character-level-{{level}}@3x.png.webp 3x" alt="player" class="tapGame--player tapGame--player--level-{{level}}" id="tapGame--player" >
+                    <img src="https://cdn.umperium.com/static/character-level-{{level}}.png.webp" srcset="https://cdn.umperium.com/static/character-level-{{level}}@2x.png.webp 2x, https://cdn.umperium.com/static/character-level-{{level}}@3x.png.webp 3x" alt="player" class="tapGame--player tapGame--player--level-{{level}}" id="tapGame--player" >
                 </button>
             </div>
         </div>
@@ -43,7 +43,7 @@
     <div class="row d-flex">
         <div class="col-5 d-flex justify-content-start align-items-end">
             <div class="level--energy d-flex">
-                <img src="https://d25ebjvanew4na.cloudfront.net/static/icon-lightning.svg" alt="lightning" class="level--energyIcon">
+                <img src="https://cdn.umperium.com/static/icon-lightning.svg" alt="lightning" class="level--energyIcon">
                 <p class="level--energyValue">
                     <span class="level--energyValueCurrent" id="level--energyValueCurrent">{{current_energy}}</span>/
                     <span class="level--energyValueMax">{{max_energy}}</span>
@@ -83,7 +83,7 @@
                     <!-- Level 1 -->
                     <div class="swiper-slide">
                         <div class="levelModal--carouselImageWrapper">
-                            <img src="https://d25ebjvanew4na.cloudfront.net/static/character-level-1.png.webp" srcset="https://d25ebjvanew4na.cloudfront.net/static/character-level-1@2x.png.webp 2x, https://d25ebjvanew4na.cloudfront.net/static/character-level-1@3x.png.webp 3x" class="d-block" alt="level-1">
+                            <img src="https://cdn.umperium.com/static/character-level-1.png.webp" srcset="https://cdn.umperium.com/static/character-level-1@2x.png.webp 2x, https://cdn.umperium.com/static/character-level-1@3x.png.webp 3x" class="d-block" alt="level-1">
                         </div>
                         <p class="levelModal--carouselText">{{text.level}} 1 - {{text_levels.1.name}}</p>
                         <div class="levelModal--carouselLevel">
@@ -98,7 +98,7 @@
                     <!-- Level 2 -->
                     <div class="swiper-slide">
                         <div class="levelModal--carouselImageWrapper">
-                            <img src="https://d25ebjvanew4na.cloudfront.net/static/character-level-2.png.webp" srcset="https://d25ebjvanew4na.cloudfront.net/static/character-level-2@2x.png.webp 2x, https://d25ebjvanew4na.cloudfront.net/static/character-level-2@3x.png.webp 3x" class="d-block" alt="level-2">
+                            <img src="https://cdn.umperium.com/static/character-level-2.png.webp" srcset="https://cdn.umperium.com/static/character-level-2@2x.png.webp 2x, https://cdn.umperium.com/static/character-level-2@3x.png.webp 3x" class="d-block" alt="level-2">
                         </div>
                         <p class="levelModal--carouselText">{{text.level}} 2 - {{text_levels.2.name}}</p>
                         <div class="levelModal--carouselLevel">
@@ -113,7 +113,7 @@
                     <!-- Level 3 -->
                     <div class="swiper-slide">
                         <div class="levelModal--carouselImageWrapper">
-                            <img src="https://d25ebjvanew4na.cloudfront.net/static/character-level-3.png.webp" srcset="https://d25ebjvanew4na.cloudfront.net/static/character-level-3@2x.png.webp 2x, https://d25ebjvanew4na.cloudfront.net/static/character-level-3@3x.png.webp 3x" class="d-block" alt="level-3">
+                            <img src="https://cdn.umperium.com/static/character-level-3.png.webp" srcset="https://cdn.umperium.com/static/character-level-3@2x.png.webp 2x, https://cdn.umperium.com/static/character-level-3@3x.png.webp 3x" class="d-block" alt="level-3">
                         </div>
                         <p class="levelModal--carouselText">{{text.level}} 3 - {{text_levels.3.name}}</p>
                         <div class="levelModal--carouselLevel">
@@ -126,7 +126,7 @@
                     <!-- Level 4 -->
                     <div class="swiper-slide">
                         <div class="levelModal--carouselImageWrapper">
-                            <img src="https://d25ebjvanew4na.cloudfront.net/static/character-level-4.png.webp" srcset="https://d25ebjvanew4na.cloudfront.net/static/character-level-4@2x.png.webp 2x, https://d25ebjvanew4na.cloudfront.net/static/character-level-4@3x.png.webp 3x" class="d-block" alt="level-4">
+                            <img src="https://cdn.umperium.com/static/character-level-4.png.webp" srcset="https://cdn.umperium.com/static/character-level-4@2x.png.webp 2x, https://cdn.umperium.com/static/character-level-4@3x.png.webp 3x" class="d-block" alt="level-4">
                         </div>
                         <p class="levelModal--carouselText">{{text.level}} 4 - {{text_levels.4.name}}</p>
                         <div class="levelModal--carouselLevel">
@@ -139,7 +139,7 @@
                     <!-- Level 5 -->
                     <div class="swiper-slide">
                         <div class="levelModal--carouselImageWrapper">
-                            <img src="https://d25ebjvanew4na.cloudfront.net/static/character-level-5.png.webp" srcset="https://d25ebjvanew4na.cloudfront.net/static/character-level-5@2x.png.webp 2x, https://d25ebjvanew4na.cloudfront.net/static/character-level-5@3x.png.webp 3x" class="d-block" alt="level-5">
+                            <img src="https://cdn.umperium.com/static/character-level-5.png.webp" srcset="https://cdn.umperium.com/static/character-level-5@2x.png.webp 2x, https://cdn.umperium.com/static/character-level-5@3x.png.webp 3x" class="d-block" alt="level-5">
                         </div>
                         <p class="levelModal--carouselText">{{text.level}} 5 - {{text_levels.5.name}}</p>
                         <div class="levelModal--carouselLevel">
@@ -152,7 +152,7 @@
                     <!-- Level 6 -->
                     <div class="swiper-slide">
                         <div class="levelModal--carouselImageWrapper">
-                            <img src="https://d25ebjvanew4na.cloudfront.net/static/character-level-6.png.webp" srcset="https://d25ebjvanew4na.cloudfront.net/static/character-level-6@2x.png.webp 2x, https://d25ebjvanew4na.cloudfront.net/static/character-level-6@3x.png.webp 3x" class="d-block" alt="level-6">
+                            <img src="https://cdn.umperium.com/static/character-level-6.png.webp" srcset="https://cdn.umperium.com/static/character-level-6@2x.png.webp 2x, https://cdn.umperium.com/static/character-level-6@3x.png.webp 3x" class="d-block" alt="level-6">
                         </div>
                         <p class="levelModal--carouselText">{{text.level}} 6 - {{text_levels.6.name}}</p>
                         <div class="levelModal--carouselLevel">
@@ -165,7 +165,7 @@
                     <!-- Level 7 -->
                     <div class="swiper-slide">
                         <div class="levelModal--carouselImageWrapper">
-                            <img src="https://d25ebjvanew4na.cloudfront.net/static/character-level-7.png.webp" srcset="https://d25ebjvanew4na.cloudfront.net/static/character-level-7@2x.png.webp 2x, https://d25ebjvanew4na.cloudfront.net/static/character-level-7@3x.png.webp 3x" class="d-block" alt="level-7">
+                            <img src="https://cdn.umperium.com/static/character-level-7.png.webp" srcset="https://cdn.umperium.com/static/character-level-7@2x.png.webp 2x, https://cdn.umperium.com/static/character-level-7@3x.png.webp 3x" class="d-block" alt="level-7">
                         </div>
                         <p class="levelModal--carouselText">{{text.level}} 7 - {{text_levels.7.name}}</p>
                         <div class="levelModal--carouselLevel">
@@ -202,11 +202,11 @@
                 </div>
                 <div class="levelModal--statsRow">
                     <span class="levelModal--statsText">{{text.investments_const}}</span>
-                    <span class="levelModal--statsValue"><span id="levelModal--statsValue--totalSpent"></span> <img src="https://d25ebjvanew4na.cloudfront.net/static/icon-coin.svg" alt="coin"></span>
+                    <span class="levelModal--statsValue"><span id="levelModal--statsValue--totalSpent"></span> <img src="https://cdn.umperium.com/static/icon-coin.svg" alt="coin"></span>
                 </div>
                 <div class="levelModal--statsRow">
                     <span class="levelModal--statsText">{{text.profit}}</span>
-                    <span class="levelModal--statsValue"><span id="levelModal--statsValue--totalIncome"></span>  <img src="https://d25ebjvanew4na.cloudfront.net/static/icon-coin.svg" alt="coin"></span>
+                    <span class="levelModal--statsValue"><span id="levelModal--statsValue--totalIncome"></span>  <img src="https://cdn.umperium.com/static/icon-coin.svg" alt="coin"></span>
                 </div>
                 <div class="levelModal--statsRow">
                     <span class="levelModal--statsText">{{text.pnl}}</span>
@@ -242,7 +242,7 @@
             <div class="modal-header">
                 <h1 class="modal-title fs-5" id="langModalLabel">{{text.change_lang}}</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
-                    <img src="https://d25ebjvanew4na.cloudfront.net/static/icon-close.svg" alt="close">
+                    <img src="https://cdn.umperium.com/static/icon-close.svg" alt="close">
                 </button>
             </div>
             <div class="modal-body">
@@ -271,7 +271,7 @@
             <div class="col">
                 <h3 class="incomeModal--title">{{text.offline_income_title}}</h3>
                 <div class="incomeModal--valueWrapper d-flex justify-content-center">
-                    <div class="incomeModal--value">{{offline_income}} <img src="https://d25ebjvanew4na.cloudfront.net/static/icon-coin.svg" alt="coin"></div>
+                    <div class="incomeModal--value">{{offline_income}} <img src="https://cdn.umperium.com/static/icon-coin.svg" alt="coin"></div>
                 </div>
                 <p class="incomeModal--cta">{{text.offline_income_cta}}</p>
                 <a class="btn btn-primary incomeModal--button" onclick="hideIncomeModal()">{{text.offline_income_close}}</a>
@@ -282,5 +282,5 @@
 {{/show_offline_income}}
 
 
-<img src="https://d25ebjvanew4na.cloudfront.net/static/icon-slide-right.svg" width="0" height="0" alt="">
-<img src="https://d25ebjvanew4na.cloudfront.net/static/tap-bg.svg" width="0" height="0" alt="">
+<img src="https://cdn.umperium.com/static/icon-slide-right.svg" width="0" height="0" alt="">
+<img src="https://cdn.umperium.com/static/tap-bg.svg" width="0" height="0" alt="">
