update bot urls

--- a/pages/friends/friends.template.html
+++ b/pages/friends/friends.template.html
@@ -9,7 +9,7 @@
 <div class="container-fluid inviteButtons">
     <div class="row">
         <div class="col d-flex">
-            <a class="inviteButtons--button inviteButtons--buttonInvite" href="https://t.me/share/url?url=t.me/UmperiumTGBot/umperium?startapp={{ref_id}}&text={{text.tg_message_text}}">{{text.invite_button}} <img src="https://cdn.umperium.com/static/button-icon-plus.svg" alt="plus"></a>
+            <a class="inviteButtons--button inviteButtons--buttonInvite" href="https://t.me/share/url?url=t.me/UmperiumBot/game?startapp={{ref_id}}&text={{text.tg_message_text}}">{{text.invite_button}} <img src="https://cdn.umperium.com/static/button-icon-plus.svg" alt="plus"></a>
             <a class="inviteButtons--button inviteButtons--buttonCopyUrl" onclick="copyUrlButtonClick()">
                 <img src="https://cdn.umperium.com/static/button-icon-copy.svg" alt="copy">
             </a>
