--- a/pages/boost/boost.template.html
+++ b/pages/boost/boost.template.html
@@ -53,7 +53,7 @@
                  data-id="{{task_id.$oid}}"
                  data-url="{{url}}"
                  data-title="{{{title}}}"
-                 data-needs-verification="true"
+                 data-needs-verification="{{needs_verification}}"
                  onclick="clickTask(this)">
                 <div class="boostTask--itemIcon">
                     <img src="{{icon}}" alt="">
